--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Заголовок</title>
-    <meta name="description" content="">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css?ver=1.6.6" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
   </head>
   <body class="page" id="top">
@@ -27,26 +26,11 @@
       </footer>
       <!-- END footer -->
 
-
-
       <!-- /.popup -->
       <div class="popup" id="mainForm">
         <div class="popup__content">
           <div class="popup__body">
             <button class="popup__close"></button>
-            <div class="popup-form show">
-
-              </form>
-            </div>
-            <div class="popup-loading">
-
-            </div>
-            <div class="popup-send">
-
-            </div>
-            <div class="popup-error">
-
-            </div>
           </div>
         </div>
         <!-- /.popup__content -->
@@ -56,8 +40,7 @@
     <!-- END page__wrapper -->
 
     <!-- scripts -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.min.js"></script>
     <!-- END scripts -->
   </body>
 </html>
