Удалил лишнее, настроил папки

--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Заголовок</title>
+    <meta name="description" content="Описание стараницы">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css" />
-
   </head>
   <body class="page" id="top">
     <div class="page__wrapper" >
@@ -26,7 +26,6 @@
       </footer>
       <!-- END footer -->
 
-      <!-- /.popup -->
       <div class="popup" id="mainForm">
         <div class="popup__content">
           <div class="popup__body">
@@ -40,7 +39,6 @@
     <!-- END page__wrapper -->
 
     <!-- scripts -->
-    <script src="assets/js/main.min.js"></script>
-    <!-- END scripts -->
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
