Добавил минимизацию файлов

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,8 @@
     <title>Заголовок</title>
     <meta name="description" content="Описание стараницы">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.min.css" />
+    <!-- <link rel="stylesheet" href="assets/library/vendor.min.css" /> -->
   </head>
   <body class="page" id="top">
     <div class="page__wrapper" >
@@ -39,6 +40,7 @@
     <!-- END page__wrapper -->
 
     <!-- scripts -->
-    <script src="assets/js/main.js"></script>
+    <!-- <script src="assets/library/vendor.min.js"></script> -->
+    <script src="assets/js/main.min.js"></script>
   </body>
 </html>
