Старница Дизайн + правки

--- a/app/design.html
+++ b/app/design.html
@@ -15,7 +15,7 @@
         @@include('template/header.html')
 
         <main class="page__content">
-            <section class="main-screen">
+            <section class="main-screen box-shadow">
                 <div class="container">
                     <div class="main-screen__wrapper">
                         <div class="main-screen__content">
@@ -40,6 +40,60 @@
             </section>
             <!-- /.main-screen -->
 
+            <section class="porfolit-min">
+                <div class="container">
+                    <h2 class="porfolit-min__title">НАШИ <br> РАБОТЫ</h2>
+                    <!-- /.porfolit-min__title -->
+                    <div class="porfolit-min__wrapper">
+                        <div class="porfolit-min__card">
+                            <div class="porfolit-min__image">
+                                <img src="assets/img/case/luxvisage_xxl_mascara 2.png" alt="">
+                            </div>
+                            <!-- /.porfolit-min__image -->
+                            <div class="porfolit-min__content">
+                                <p class="porfolit-min__price">2500000₽</p>
+                                <p class="porfolit-min__date">в месяц</p>
+                                <h3 class="porfolit-min__name">Тушь для ресниц</h3>
+                                <a href="#" class="btn">Подробнее</a>
+                            </div>
+                            <!-- /.porfolit-min__content -->
+                        </div>
+                        <!-- /.porfolit-min__card -->
+                        <div class="porfolit-min__card">
+                            <div class="porfolit-min__image">
+                                <img src="assets/img/case/shampun_keratin_1000 3.png" alt="">
+                            </div>
+                            <!-- /.porfolit-min__image -->
+                            <div class="porfolit-min__content">
+                                <p class="porfolit-min__price">1000000₽</p>
+                                <p class="porfolit-min__date">в месяц</p>
+                                <h3 class="porfolit-min__name">Шампунь кератин</h3>
+                                <a href="#" class="btn">Подробнее</a>
+                            </div>
+                            <!-- /.porfolit-min__content -->
+                        </div>
+                        <!-- /.porfolit-min__card -->
+                        <div class="porfolit-min__card">
+                            <div class="porfolit-min__image">
+                                <img src="assets/img/case/vitex.png" alt="">
+                            </div>
+                            <!-- /.porfolit-min__image -->
+                            <div class="porfolit-min__content">
+                                <p class="porfolit-min__price">970000₽</p>
+                                <p class="porfolit-min__date">в месяц</p>
+                                <h3 class="porfolit-min__name">Крем массажный</h3>
+                                <a href="#" class="btn">Подробнее</a>
+                            </div>
+                            <!-- /.porfolit-min__content -->
+                        </div>
+                        <!-- /.porfolit-min__card -->
+                    </div>
+                    <!-- /.porfolit-min__wrapper -->
+                </div>
+                <!-- /.container -->
+            </section>
+            <!-- /.porfolit-min -->
+
 
             <section class="info-block">
                 <div class="container">
@@ -47,14 +101,21 @@
                         <div class="info-block__content">
                             <h2 class="info-block__title">ДИЗАЙН <br> BLACKBOX</h2>
                             <div class="info-block__text">
-                                <p>Главная цель дизайна – привлечь внимание потенциального покупателя, замотивировать
-                                    перейти в карточку товара и побудить
-                                    к покупке. Наша команда поможет создать запоминающийся фото и видео контент,
-                                    продемонстрировать ценность товара, показывать товар в
-                                    действии и выделиться на фоне конкурентов.</p>
-                                <p>Единственная возможность контакта с покупателем на маркетплейсе – это карточка
-                                    товара. Продвижение карточки товара в Топ
-                                    не реализовать без уникального визуала.</p>
+                                <div>
+                                    <p>Главная цель дизайна – <b>привлечь внимание потенциального покупателя</b>,
+                                        замотивировать перейти в карточку товара и побудить
+                                        к покупке.</p>
+                                    <p>Наша команда поможет создать <b>запоминающийся фото и видео</b> контент,
+                                        продемонстрировать ценность товара, показывать товар в
+                                        действии и выделиться на фоне конкурентов.</p>
+                                </div>
+                                <div>
+                                    <p><b>Единственная возможность контакта с покупателем на
+                                            маркетплейсе</b> – это
+                                        карточка
+                                        товара. Продвижение карточки товара в Топ
+                                        не реализовать без уникального визуала.</p>
+                                </div>
                             </div>
                         </div>
                         <!-- /.info-block__content -->
