--- a/app/seo.html
+++ b/app/seo.html
@@ -25,7 +25,7 @@
                                     по максимальному количеству запросов
                                 </p>
                             </div>
-                            <h1>SEO на <br> маркетплейсах</h1>
+                            <h1><span>SEO</span> на <br> маркетплейсах</h1>
                             <button class="btn">Заполнить заявку</button>
                         </div>
                         <!-- /.main-screen__content -->
@@ -67,13 +67,20 @@
                         <div class="info-block__content">
                             <h2 class="info-block__title">В ЧЕМ СЕКРЕТ<br>НАШЕГО SEO?</h2>
                             <div class="info-block__text">
-                                <p>Настройки SEO оптимизации карточек позволяют работать и расти в поиске даже после
-                                    завершения сотрудничества. Правильная оптимизация поможет не только получать целевой
-                                    трафик внутри маркетплейса, но и принесёт заказы, которые оформят пользователи из
-                                    поисковиков, увеличивая количество заказов в несколько раз.</p>
-                                <p>Главная цель – гарантированный рост продаж, не только в краткосрочной перспективе, но
-                                    и на длинной дистанции.Создание успешного списка ключевых слов — он во многом
-                                    определит успех продвижения и дальнейшие продажи ваших товаров.</p>
+                                <div>
+                                    <p>Мы предлагаем своим клиентам <b>уникальное продающее описание товара</b> с
+                                        использованием ключевых запросов. Главная цель –
+                                        <b>гарантированный рост</b> продаж в краткосрочной и долгосрочной перспективе.
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>Правильная оптимизация поможет <b>выделиться среди конкурентов</b> и найти Ваш
+                                        товар потенциальному покупателю.
+                                    </p>
+                                    <p>Этот инструмент дает огромное преимущество: товар может отобразиться не только
+                                        во внутренней выдаче конкретного маркетплейса, но и на первых страницах Яндекса
+                                        и Google</p>
+                                </div>
                             </div>
                         </div>
                         <!-- /.info-block__content -->
