--- a/app/ads.html
+++ b/app/ads.html
@@ -15,7 +15,7 @@
         @@include('template/header.html')
 
         <main class="page__content">
-            <section class="main-screen box-shadow">
+            <section class="main main-screen box-shadow">
                 <div class="container">
                     <div class="main-screen__wrapper">
                         <div class="main-screen__content">
