--- a/app/design.html
+++ b/app/design.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Продвижение и сопровождение на маркетплейсах</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="assets/css/style.min.css" />
+    <link rel="stylesheet" href="assets/css/style.min.css?ver=1.2" />
 </head>
 
 <body class="page" id="top">
@@ -15,7 +15,7 @@
         @@include('template/header.html')
 
         <main class="page__content">
-            <section class="main-screen box-shadow">
+            <section class="main main-screen box-shadow">
                 <div class="container">
                     <div class="main-screen__wrapper">
                         <div class="main-screen__content">
@@ -45,21 +45,21 @@
                     <h2 class="porfolit-min__title">НАШИ <br> РАБОТЫ</h2>
                     <!-- /.porfolit-min__title -->
                     <div class="porfolit-min__wrapper">
-                        <div class="porfolit-min__card">
-                            <div class="porfolit-min__image">
+                        <a href="#" class="porfolit-min__card">
+                            <span class="porfolit-min__image">
                                 <img src="assets/img/case/luxvisage_xxl_mascara 2.png" alt="">
-                            </div>
+                            </span>
                             <!-- /.porfolit-min__image -->
-                            <div class="porfolit-min__content">
+                            <span class="porfolit-min__content">
                                 <p class="porfolit-min__price">2500000₽</p>
                                 <p class="porfolit-min__date">в месяц</p>
                                 <h3 class="porfolit-min__name">Тушь для ресниц</h3>
-                                <a href="#" class="btn">Подробнее</a>
-                            </div>
+                                <span class="btn">Подробнее</span>
+                            </span>
                             <!-- /.porfolit-min__content -->
-                        </div>
+                        </a>
                         <!-- /.porfolit-min__card -->
-                        <div class="porfolit-min__card">
+                        <a href="#" class="porfolit-min__card">
                             <div class="porfolit-min__image">
                                 <img src="assets/img/case/shampun_keratin_1000 3.png" alt="">
                             </div>
@@ -68,12 +68,12 @@
                                 <p class="porfolit-min__price">1000000₽</p>
                                 <p class="porfolit-min__date">в месяц</p>
                                 <h3 class="porfolit-min__name">Шампунь кератин</h3>
-                                <a href="#" class="btn">Подробнее</a>
+                                <span class="btn">Подробнее</span>
                             </div>
                             <!-- /.porfolit-min__content -->
-                        </div>
+                        </a>
                         <!-- /.porfolit-min__card -->
-                        <div class="porfolit-min__card">
+                        <a href="#" class="porfolit-min__card">
                             <div class="porfolit-min__image">
                                 <img src="assets/img/case/vitex.png" alt="">
                             </div>
@@ -82,10 +82,10 @@
                                 <p class="porfolit-min__price">970000₽</p>
                                 <p class="porfolit-min__date">в месяц</p>
                                 <h3 class="porfolit-min__name">Крем массажный</h3>
-                                <a href="#" class="btn">Подробнее</a>
+                                <span class="btn">Подробнее</span>
                             </div>
                             <!-- /.porfolit-min__content -->
-                        </div>
+                        </a>
                         <!-- /.porfolit-min__card -->
                     </div>
                     <!-- /.porfolit-min__wrapper -->
