--- a/app/turnkey.html
+++ b/app/turnkey.html
@@ -15,7 +15,7 @@
         @@include('template/header.html')
 
         <main class="page__content">
-            <section class="main main-screen">
+            <section class="main main-screen box-shadow">
                 <div class="container">
                     <div class="main-screen__wrapper">
                         <div class="main-screen__content">
@@ -25,12 +25,14 @@
                                     по максимальному количеству запросов
                                 </p>
                             </div>
-                            <h1><span>SEO</span> на <br> маркетплейсах</h1>
+                            <h1>ПРОДВИЖЕНИЕ И СОПРОВОЖДЕНИЕ <br>
+                                <span>ПОД КЛЮЧ</span>
+                            </h1>
                             <button class="btn">Заполнить заявку</button>
                         </div>
                         <!-- /.main-screen__content -->
                         <div class="main-screen__images">
-                            <img src="assets/img/infographics/raketa_main.png" alt="">
+                            <img src="assets/img/infographics/colors_main.png" alt="">
                         </div>
                         <!-- /.main-screen__images -->
                     </div>
@@ -40,52 +42,87 @@
             </section>
             <!-- /.main-screen -->
 
-            <section class="free-analysis">
+            <section class="porfolit-min">
                 <div class="container">
-                    <div class="free-analysis__wrapper">
-                        <div class="free-analysis__icon">
-                            <img src="assets/img/infographics/info.png" alt="">
+                    <h2 class="porfolit-min__title">НАШИ <br> РАБОТЫ</h2>
+                    <!-- /.porfolit-min__title -->
+                    <div class="porfolit-min__wrapper">
+                        <div class="porfolit-min__card">
+                            <div class="porfolit-min__image">
+                                <img src="assets/img/case/luxvisage_xxl_mascara 2.png" alt="">
+                            </div>
+                            <!-- /.porfolit-min__image -->
+                            <div class="porfolit-min__content">
+                                <p class="porfolit-min__price">2500000₽</p>
+                                <p class="porfolit-min__date">в месяц</p>
+                                <h3 class="porfolit-min__name">Тушь для ресниц</h3>
+                                <a href="#" class="btn">Подробнее</a>
+                            </div>
+                            <!-- /.porfolit-min__content -->
                         </div>
-                        <!-- /.free__icon -->
-                        <div class="free-analysis__content">
-                            <h2>Бесплатный анализ SEO
-                                текст карточки (1 SKU)</h2>
-                            <p>Ограниченная временная акция(бонус) при оформлении заявки на сайте прямо сейчас</p>
-                            <button class="btn">Заполнить</button>
+                        <!-- /.porfolit-min__card -->
+                        <div class="porfolit-min__card">
+                            <div class="porfolit-min__image">
+                                <img src="assets/img/case/shampun_keratin_1000 3.png" alt="">
+                            </div>
+                            <!-- /.porfolit-min__image -->
+                            <div class="porfolit-min__content">
+                                <p class="porfolit-min__price">1000000₽</p>
+                                <p class="porfolit-min__date">в месяц</p>
+                                <h3 class="porfolit-min__name">Шампунь кератин</h3>
+                                <a href="#" class="btn">Подробнее</a>
+                            </div>
+                            <!-- /.porfolit-min__content -->
                         </div>
-                        <!-- /.free__content -->
+                        <!-- /.porfolit-min__card -->
+                        <div class="porfolit-min__card">
+                            <div class="porfolit-min__image">
+                                <img src="assets/img/case/vitex.png" alt="">
+                            </div>
+                            <!-- /.porfolit-min__image -->
+                            <div class="porfolit-min__content">
+                                <p class="porfolit-min__price">970000₽</p>
+                                <p class="porfolit-min__date">в месяц</p>
+                                <h3 class="porfolit-min__name">Крем массажный</h3>
+                                <a href="#" class="btn">Подробнее</a>
+                            </div>
+                            <!-- /.porfolit-min__content -->
+                        </div>
+                        <!-- /.porfolit-min__card -->
                     </div>
-                    <!-- /.free__wrapper -->
+                    <!-- /.porfolit-min__wrapper -->
                 </div>
                 <!-- /.container -->
             </section>
-            <!-- /.free -->
+            <!-- /.porfolit-min -->
+
 
             <section class="info-block">
                 <div class="container">
                     <div class="info-block__card">
                         <div class="info-block__content">
-                            <h2 class="info-block__title">В ЧЕМ СЕКРЕТ<br>НАШЕГО SEO?</h2>
+                            <h2 class="info-block__title">ДИЗАЙН <br> BLACKBOX</h2>
                             <div class="info-block__text">
                                 <div>
-                                    <p>Мы предлагаем своим клиентам <b>уникальное продающее описание товара</b> с
-                                        использованием ключевых запросов. Главная цель –
-                                        <b>гарантированный рост</b> продаж в краткосрочной и долгосрочной перспективе.
-                                    </p>
+                                    <p>Главная цель дизайна – <b>привлечь внимание потенциального покупателя</b>,
+                                        замотивировать перейти в карточку товара и побудить
+                                        к покупке.</p>
+                                    <p>Наша команда поможет создать <b>запоминающийся фото и видео</b> контент,
+                                        продемонстрировать ценность товара, показывать товар в
+                                        действии и выделиться на фоне конкурентов.</p>
                                 </div>
                                 <div>
-                                    <p>Правильная оптимизация поможет <b>выделиться среди конкурентов</b> и найти Ваш
-                                        товар потенциальному покупателю.
-                                    </p>
-                                    <p>Этот инструмент дает огромное преимущество: товар может отобразиться не только
-                                        во внутренней выдаче конкретного маркетплейса, но и на первых страницах Яндекса
-                                        и Google</p>
+                                    <p><b>Единственная возможность контакта с покупателем на
+                                            маркетплейсе</b> – это
+                                        карточка
+                                        товара. Продвижение карточки товара в Топ
+                                        не реализовать без уникального визуала.</p>
                                 </div>
                             </div>
                         </div>
                         <!-- /.info-block__content -->
                         <div class="info-block__image">
-                            <img src="assets/img/infographics/computer_main.png" alt="">
+                            <img src="assets/img/infographics/pazle_main.png" alt="">
                         </div>
                         <!-- /.info-block__image -->
                     </div>
@@ -97,74 +134,76 @@
 
             <section class="prices">
                 <div class="container">
-                    <h2 class="prices__title">ТАРИФЫ SEO</h2>
+                    <h2 class="prices__title">ТАРИФЫ ДИЗАЙН</h2>
                     <div class="prices__head">
-                        <a href="#start" class="prices__tab active">START</a>
-                        <a href="#buisness" class="prices__tab">BUISNESS</a>
-                        <a href="#premium" class="prices__tab">PREMIUM</a>
+                        <a href="#start" class="prices__tab active">WHITE</a>
+                        <a href="#buisness" class="prices__tab">GREEN</a>
+                        <a href="#premium" class="prices__tab">GOLD</a>
                     </div>
                     <div class="prices__wrapper">
                         <div class="prices__item active" id="start">
-                            <div class="prices__marker"><img src="assets/img/text/seo.svg" alt=""></div>
-                            <h3 class="prices__name">START</h3>
+                            <div class="prices__marker"><img src="assets/img/text/DESIGN.svg" alt=""></div>
+                            <h3 class="prices__name">WHITE</h3>
                             <ul class="prices__list">
-                                <li>Заполнение поля бренда, комплектации, названия</li>
-                                <li>Заполнение дополнительных полей</li>
-                                <li>Фотография-заглушка</li>
-                                <li class="no">Сбор семантического ядра для поисковых систем Яндекс, Гугл</li>
-                                <li class="no">Рекомендованный ТЗ на дизайн</li>
-                                <li class="no">Предложения на прописание "Рекомендаций" (при возможности)</li>
+                                <li>Обложка с продающим дизайном</li>
+                                <li>2 картинки с уникальным дизайном</li>
+                                <li>Обработка фото и инфографики</li>
+                                <li>Фото распокованного
+                                    товара</li>
+                                <li class="no">Видео 360 градусов</li>
+                                <li class="no">Полный видео обзор товара с длительность более 1 минуты</li>
                             </ul>
                             <div class="prices__footer">
-                                <div class="prices__price">300₽</div>
+                                <div class="prices__price">990₽</div>
                                 <div class="prices__count">за 1 шт.</div>
                                 <button class="btn prices__btn">Заказать</button>
                             </div>
                             <div class="prices__icon">
-                                <img src="assets/img/text/raketa.png" alt="">
+                                <img src="assets/img/text/color.png" alt="">
                             </div>
                         </div>
                         <!-- /.prices__item -->
                         <div class="prices__item" id="buisness">
-                            <div class="prices__marker"><img src="assets/img/text/seo.svg" alt=""></div>
-                            <h3 class="prices__name">BUISNESS</h3>
+                            <div class="prices__marker"><img src="assets/img/text/DESIGN.svg" alt=""></div>
+                            <h3 class="prices__name">GREEN</h3>
                             <ul class="prices__list">
-                                <li>Заполнение поля "Наименование" по ключевым запросам</li>
-                                <li>Заполнение поля "Описание" 800+ символов, подбор ЦА по предмету</li>
-                                <li>Полное заполнение дополнительных полей</li>
-                                <li>Сбор семантического ядра для поисковых систем Яндекс, Гугл</li>
-                                <li class="no">Рекомендованный ТЗ на дизайн</li>
-                                <li class="no">Предложения на прописание "Рекомендаций" (при возможности)</li>
+                                <li>Обложка с продающим дизайном</li>
+                                <li>4 картинки с уникальным дизайном</li>
+                                <li>Обработка фото и инфографики</li>
+                                <li>Фото распокованного
+                                    товара</li>
+                                <li>Видео 360 градусов</li>
+                                <li class="no">Полный видео обзор товара с длительность более 1 минуты</li>
                             </ul>
                             <div class="prices__footer">
-                                <div class="prices__price">700₽</div>
+                                <div class="prices__price">2990₽</div>
                                 <div class="prices__count">за 1 шт.</div>
                                 <button class="btn prices__btn">Заказать</button>
                             </div>
                             <div class="prices__icon">
-                                <img src="assets/img/text/raketa.png" alt="">
+                                <img src="assets/img/text/color.png" alt="">
                             </div>
                         </div>
                         <!-- /.prices__item -->
                         <div class="prices__item" id="premium">
-                            <div class="prices__marker"><img src="assets/img/text/seo.svg" alt=""></div>
-                            <h3 class="prices__name">PREMIUM</h3>
+                            <div class="prices__marker"><img src="assets/img/text/DESIGN.svg" alt=""></div>
+                            <h3 class="prices__name">GOLD</h3>
                             <ul class="prices__list">
-                                <li>Заполнение поля "Наименование" по ключевым запросам</li>
-                                <li>Заполнение поля "Описание", проведение SWOT-анализа, подбор ЦА, конкурентная
-                                    отслойка</li>
-                                <li>Полное заполнение дополнительных полей</li>
-                                <li>Сбор семантического ядра для поисковых систем Яндекс, Гугл</li>
-                                <li>Рекомендованный ТЗ на дизайн</li>
-                                <li>Предложения на прописание "Рекомендаций" (при возможности)</li>
+                                <li>Обложка с продающим дизайном</li>
+                                <li>5 картинки с уникальным дизайном</li>
+                                <li>Обработка фото и инфографики</li>
+                                <li>Фото распокованного
+                                    товара</li>
+                                <li>Видео 360 градусов</li>
+                                <li>Полный видео обзор товара с длительность более 1 минуты</li>
                             </ul>
                             <div class="prices__footer">
-                                <div class="prices__price">1500₽</div>
+                                <div class="prices__price">5990₽</div>
                                 <div class="prices__count">за 1 шт.</div>
                                 <button class="btn prices__btn">Заказать</button>
                             </div>
                             <div class="prices__icon">
-                                <img src="assets/img/text/raketa.png" alt="">
+                                <img src="assets/img/text/color.png" alt="">
                             </div>
                         </div>
                         <!-- /.prices__item -->
